<resources>
    <string name="app_name">Kelud Stats</string>
    <string name="infografis_photo">Foto Infografis</string>
    <string name="profile">Profil</string>
    <string name="login">Masuk</string>
    <string name="privacy_and_security">Privasi dan Keamanan</string>
    <string name="notification">Notifikasi</string>
    <string name="general">Umum</string>
    <string name="about_kelud_stats">Tentang KELUD STATS</string>
    <string name="exit">Keluar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="create_new_indicator">Buat Indikator Baru</string>
    <string name="fields_cant_be_empty">Tidak ada bagian yang boleh kosong</string>
    <string name="create">Buat</string>
    <string name="create_new_subindicator">Tambah Subindikator Baru</string>
    <string name="bps_kabupaten_kediri">BPS Kabupaten Kediri</string>
    <string name="infografis">Infografis</string>
    <string name="welcome_back">Selamat Datang Kembali</string>
    <string name="about_application">Kelud Stats kepanjangan dari Kediri Untaian Data Statistika Kabupaten Kediri.</string>
    <string name="version">Version %1$s</string>
    <string name="statistic_news">Berita Resmi Statistik :</string>
    <string name="day_date">%02d</string>
    <string name="indicator">indikator</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="save">simpan</string>
    <string name="every_field_is_mandatory">Setiap Bagian Harus Terisi</string>
    <string name="upload_pictyre">upload gambar</string>
    <string name="subindicator_delete_confirmation">Apakah anda yakin ingin menghapus subindikator %1$s</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="indicator_delete_confirmation">Apakah anda yakin ingin menghapus indikator %1$s</string>
    <string name="edit_indicator">Edit Indikator</string>
    <string name="edit_subindicator">Edit Subindikator</string>
    <string name="update">Ubah</string>
    <string name="year">Tahun</string>
    <string name="year_delete_confirmation">Apakah anda yakin ingin menghapus tahun ini ?</string>
    <string name="create_new_year">Tambah tahun baru</string>
    <string name="nilai_per_tahun_delete_confirmation">Apakah anda yakin ingin menghapus nilai ini ?</string>
    <string name="satuan">Satuan</string>
    <string name="create_indikator_satuan">Tambah Indikator Satuan Baru</string>
    <string name="new_value">Nilai Baru</string>
    <string name="create_new_value">Masukkan Nilai Baru</string>
    <string name="indikator_satuan_delete_confirmation">Apakah anda yakin ingin menghapus indikator satuan %1$s ?</string>
    <string name="onboarding2_description">KELUD STATS melayani dengan Professional dan, Integritas dan Amanah</string>
</resources>