<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/profile"
            android:layout_height="wrap_content"/>

        <!-- Profile -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/loginTv"
                    android:layout_width="match_parent"
                    android:text="@string/login"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/privacyTv"
                    android:layout_width="match_parent"
                    android:text="@string/privacy_and_security"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/notificationTv"
                    android:layout_width="match_parent"
                    android:text="@string/notification"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/general"
            android:layout_height="wrap_content"/>

        <!-- General -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/aboutTv"
                    android:layout_width="match_parent"
                    android:text="@string/about_kelud_stats"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/exitTv"
                    android:layout_width="match_parent"
                    android:text="@string/exit"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
