<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.keludstats.shared.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="@drawable/masuk">

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/welcome_back"
            android:textSize="23dp"
            android:layout_marginHorizontal="@dimen/login_padding"
            android:textColor="@color/white"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:textSize="23dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="@dimen/login_padding"
            android:textColor="@color/white"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_marginBottom="-25dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginTop="10dp"
                    android:text="@={user.name}"/>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:text="@={user.password}"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:backgroundTint="@color/button"
                    app:cornerRadius="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="50dp"
                    android:layout_marginHorizontal="20dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</layout>
