<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="infografi"
            type="com.keludstats.shared.model.Infografi" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/background">

        <Button
            android:id="@+id/uploadInfografiPhotoBtn"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:text="@string/upload_pictyre"
            android:backgroundTint="@color/darkGrey"
            android:layout_alignParentTop="true"
            android:drawableEnd="@drawable/upload"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white"
            android:background="@color/white"
            android:layout_below="@id/uploadInfografiPhotoBtn"
            android:layout_above="@id/saveInfografiBtn">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:text="@={infografi.title}"
                        android:textColorHint="@color/lightBrown"
                        android:background="@android:color/transparent"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:textColor="@color/brown"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@={infografi.caption}"
                        android:textColorHint="@color/lightBrown"
                        android:background="@android:color/transparent"
                        android:hint="@string/caption"
                        android:gravity=""
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:textColor="@color/brown"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveInfografiBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:padding="11dp"
            android:layout_alignParentBottom="true"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </RelativeLayout>
</layout>